# DebakeEngine

./: LICENSE  README.md
dse0.1.0/.svn/: wc.db
dse0.1.0/dse_rust/debug/: Cargo.toml
dse0.1.0/dse_rust/debug/asset/model/: test.glb
dse0.1.0/dse_rust/debug/dse/: Cargo.toml
dse0.1.0/dse_rust/debug/dse/src/: main.rs
dse0.1.0/dse_rust/debug/dse/src/asset/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/convert/shader/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/convert/toml/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/examples/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/ext_api/graphic/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/input/win/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/log/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/log/performance/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/manager/execute/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/manager/execute/sub/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/meta/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/model/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/model/coord/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/model/rectangle/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/renderer/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/renderer/buffer/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/renderer/cfg/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/renderer/cmd/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/renderer/cmd/sync/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/renderer/pipeline/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/resource/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/test/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/time/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/tool/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/tool/debug/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/tool/ext_lib_debug/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/tool/stop_point/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/workarea/: mod.rs
dse0.1.0/dse_rust/debug/dse/src/workarea/win/win32impl/: mod.rs
dse0.1.0/dse_rust/debug/dse_macros/src/: lib.rs
dse0.1.0/dse_rust/doc/: LearnMD.md  vk_info.txt
dse0.1.1/dse_c_dll/src/: main.c
dse0.1.1/dse_rust/: LICENSE-MIT.txt
dse0.1.1/dse_rust/.VSCodeCounter/2025-09-26_16-59-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
dse0.1.1/dse_rust/.VSCodeCounter/2025-09-29_19-43-45/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
dse0.1.1/dse_rust/debug/: Cargo.toml  build.rs
dse0.1.1/dse_rust/debug/asset/config/app/: config.toml
dse0.1.1/dse_rust/debug/asset/register/dat/mesh/: test.toml
dse0.1.1/dse_rust/debug/asset/shader/: test_spv.spv
dse0.1.1/dse_rust/debug/dse/: Cargo.toml  log.txt
dse0.1.1/dse_rust/debug/dse/src/: main.rs
dse0.1.1/dse_rust/debug/dse/src/convert/gltf/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/convert/rect/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/examples/assembly/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/examples/meta_serialize/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/ext_api/graphic/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/hardware/gpu/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/input/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/input/win/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/log/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/manager/buffer/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/manager/datum/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/manager/execute/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/manager/execute/sub/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/material/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/model/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/model/mesh/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/model/mesh/vertex/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/model/transform/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/renderer/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/renderer/cfg/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/renderer/cmd/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/renderer/cmd/sync/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/renderer/pass/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/renderer/pipeline/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/resource/dsepack/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/shader/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/test/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/time/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/tool/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/tool/break_point/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/tool/cast/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/tool/debug/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/tool/slice/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/tool/stop_point/: mod.rs
dse0.1.1/dse_rust/debug/dse/src/workarea/: mod.rs
dse0.1.1/dse_rust/debug/dse_macros/src/tool/: mod.rs
dse0.1.1/dse_rust/doc/doc/: page.md
dse0.1.1/dse_rust/doc/doc/dev doc/: 概念设计文档.md
dse0.1.1/dse_rust/doc/doc/dev doc/game doc/achievemen/: 成就.md
dse0.1.1/dse_rust/doc/doc/dev doc/history/: 概念设计文档.html
his/dse0.1.0/dse_rust/debug/asset/register/: reg.toml
his/dse0.1.0/dse_rust/debug/asset/shader/: test_union_shader.ushader
his/dse0.1.0/dse_rust/debug/dse/: TodoList.md  build.rs
his/dse0.1.0/dse_rust/debug/dse/src/: main.rs
his/dse0.1.0/dse_rust/debug/dse/src/application/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/convert/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/convert/stdfile/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/hardware/gpu/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/log/performance/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/manager/buffer/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/manager/datum/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/meta/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/model/transform/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/node/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/resource/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/time/: mod.rs
his/dse0.1.0/dse_rust/debug/dse/src/workarea/: mod.rs
his/dse0.1.0/dse_rust/debug/dse_macros/: Cargo.toml
his/dse0.1.0/dse_rust/doc/doc/dev doc/engine/: 需求文档.md
his/dse0.1.0/dse_rust/err/: 250907info.txt
(+5 files in other folders)
