[package]
edition = "2021"
name = "dse"
version = "0.1.0"
authors = ["Debake organization"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Rust game engine for Vulkan, supporting DOP frame work"
repository = "https://github.com/z12456a/DebakeEngine"
build = "build.rs"

[lib]
proc-macro = true


[profile.release]
opt-level = 3
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "debake",
    "example",
    "config",
    "test",
    "graphic_api",
    "dse_macro",
    "env",
    "log_mode",
    "main_test",
    "vk_debug",
    "resolution",
    "root_path",
    "serialize_mode",
    "std_use",
    "execute",
]
config = [
    "config_META_VALUE_TYPE_NUM",
    "config_META_ARRAY_MAX_IMPL_NUM",
    "config_DATUM_DEFAULT_CAPACITY",
    "config_MAX_PRF_BUFFER_LEN",
    "config_MAX_LOGGER_BUFFER_LEN",
    "config_EXECUTE_SUB_STEP_LEN",
    "config_TASK_DEFAULT_QUEUE_LEN",
    "config_ENGINE_VERTEX_BUFFER",
    "config_DEFAULT_INPUT_DETECT_OFFSET_MS",
    "config_INPUT_UNIT_BUFFER_LEN",
    "config_INPUT_BUFFER_DIM_NUM",
    "config_UNIFORM_INPUT_BUFFER_CLEAR_COUNT_PER_FRAME",
    "config_SOURCE_SHADER_TYPE",
    "config_MODEL",
    "config_DEFAULT_MEM_PROPERTY_TYPE",
    "config_DEFAULT_CMD_POOL_TYPE",
    "config_DEFAULT_IS_PERFORMANCE_FIRST",
    "config_DEFAULT_FPS",
]

debake = ["debake_dev"]
debake_rt = []
debake_dev = []
debake_editor = []

test = []

execute = ["execute_use_subexe"]
execute_use_subexe = ["execute_use_subexe_true"]
execute_use_subexe_false = []
execute_use_subexe_true = []

graphic_api = ["graphic_api_vulkan_1_3"]
graphic_api_vulkan_1_3 = []
graphic_api_opengl_es_2_3 = []


example = ["example_use"]
example_use = ["example_use_assembly"]
example_disable = []

example_use_serialize_example = []
example_use_shader = []
example_use_alloc = []
example_use_assembly = []

main_test = ["main_test_true"]
main_test_fauls = []
main_test_true = []

lib_link = ["lib_link_meta_serialize"]
lib_link_meta_serialize = []

env = ["env_os", "env_bit", "env_simd"]
env_os = ["env_os_win"]
env_os_win = ["env_os_win10", "env_os_win11"]
env_os_win10 = []
env_os_win11 = []

env_bit = ["env_bit_64bit"]
env_bit_16bit = []
env_bit_32bit = []
env_bit_64bit = []
env_bit_arm = []

env_simd = ["env_simd_disable"]
env_simd_all = ["env_simd_disable", "env_simd_sse"]
env_simd_disable = []
env_simd_sse = []

log_mode = [
    "log_mode_dev",
    "log_print_mode_limit_decode",
    "log_print_during_dev",
    "log_prf_profile",
]
#log_mode=["log_mode_dev","log_print"]
log_mode_dev = []
log_mode_editor = []
log_mode_rt = []
log_print = ["log_print_mode_limit_decode", "log_print_during_sender"]
log_print_during_sender = []
log_print_during_dev = []
log_print_during_editor = []
log_print_mode_entire_code = []
log_print_mode_entire_string = []
log_print_mode_limit_decode = []
log_prf_profile = ["log_prf_profile_off"]
log_prf_profile_on = []
log_prf_profile_off = []

vk_debug = ["vk_debug_false", "vk_debug_print2console"]
vk_debug_false = []
vk_debug_print2console = []
vk_debug_true = []

win_debug = ["win_debug_print_os_false"]
win_debug_print_os_false = []
win_debug_print_os_true = []

root_path = ["root_path_debug"]
root_path_debug = []
root_path_editor = []
root_path_run_time = []

resolution = ["resolution_height", "resolution_width"]
# resolution = ["resolution_full"]
resolution_height = ["resolution_width_640"]
resolution_width = ["resolution_height_480"]
# resolution_height = ["resolution_width_1600"]
# resolution_width = ["resolution_height_900"]
resolution_full = []
resolution_width_7680 = []
resolution_width_6400 = []
resolution_width_5120 = []
resolution_width_4096 = []
resolution_width_3840 = []
resolution_width_3200 = []
resolution_width_2560 = []
resolution_width_2160 = []
resolution_width_2048 = []
resolution_width_1920 = []
resolution_width_1600 = []
resolution_width_1440 = []
resolution_width_1400 = []
resolution_width_1280 = []
resolution_width_1200 = []
resolution_width_1152 = []
resolution_width_1024 = []
resolution_width_960 = []
resolution_width_800 = []
resolution_width_768 = []
resolution_width_720 = []
resolution_width_640 = []
resolution_width_600 = []
resolution_width_480 = []
resolution_width_320 = []
resolution_height_1600 = []
resolution_height_480 = []
resolution_height_900 = []


serialize_mode = ["serialize_mode_build_in"]
serialize_mode_build_in = []
serialize_mode_serde = []

dse_macro = ["dse_macro_serialize"]
dse_macro_serialize = []

config_SOURCE_SHADER_TYPE = ["config_SOURCE_SHADER_TYPE_GLSL"]
config_SOURCE_SHADER_TYPE_GLSL = []
config_SOURCE_SHADER_TYPE_HLSL = []
config_SOURCE_SHADER_TYPE_CG = []

config_TASK_DEFAULT_QUEUE_LEN = ["config_TASK_DEFAULT_QUEUE_LEN_8"]
config_TASK_DEFAULT_QUEUE_LEN_0 = []
config_TASK_DEFAULT_QUEUE_LEN_8 = []
config_TASK_DEFAULT_QUEUE_LEN_16 = []
config_TASK_DEFAULT_QUEUE_LEN_32 = []
config_TASK_DEFAULT_QUEUE_LEN_64 = []

config_META_VALUE_TYPE_NUM = ["config_META_VALUE_TYPE_NUM_32"]
config_META_VALUE_TYPE_NUM_32 = []
config_META_VALUE_TYPE_NUM_16 = []
config_META_VALUE_TYPE_NUM_64 = []

config_META_ARRAY_MAX_IMPL_NUM = []
config_META_ARRAY_MAX_IMPL_NUM_128 = []
config_META_ARRAY_MAX_IMPL_NUM_256 = []
config_META_ARRAY_MAX_IMPL_NUM_64 = []

config_DATUM_DEFAULT_CAPACITY = [
    "config_DATUM_DEFAULT_CAPACITY_0",
    "config_DATUM_DEFAULT_LOCK_SIZE",
]
config_DATUM_DEFAULT_CAPACITY_0 = []
config_DATUM_DEFAULT_CAPACITY_4 = []
config_DATUM_DEFAULT_CAPACITY_8 = []
config_DATUM_DEFAULT_CAPACITY_16 = []
config_DATUM_DEFAULT_LOCK_SIZE = ["config_DATUM_DEFAULT_LOCK_SIZE_0"]
config_DATUM_DEFAULT_LOCK_SIZE_1 = []
config_DATUM_DEFAULT_LOCK_SIZE_0 = []

config_MAX_LOGGER_BUFFER_LEN = ["config_MAX_LOGGER_BUFFER_LEN_64"]
config_MAX_LOGGER_BUFFER_LEN_8 = []
config_MAX_LOGGER_BUFFER_LEN_32 = []
config_MAX_LOGGER_BUFFER_LEN_64 = []

config_MAX_PRF_BUFFER_LEN = ["config_MAX_PRF_BUFFER_LEN_4096"]
config_MAX_PRF_BUFFER_LEN_256 = []
config_MAX_PRF_BUFFER_LEN_4096 = []

config_EXECUTE_SUB_STEP_LEN = ["config_EXECUTE_SUB_STEP_LEN_1"]
config_EXECUTE_SUB_STEP_LEN_1 = []
config_EXECUTE_SUB_STEP_LEN_8 = []
config_EXECUTE_SUB_STEP_LEN_16 = []
config_EXECUTE_SUB_STEP_LEN_32 = []

config_ENGINE_VERTEX_BUFFER = [
    "config_ENGINE_VERTEX_BUFFER_STEP",
    "config_ENGINE_VERTEX_BUFFER_FLOAT",
]
config_ENGINE_VERTEX_BUFFER_FLOAT = ["config_ENGINE_VERTEX_BUFFER_FLOAT_true"]
config_ENGINE_VERTEX_BUFFER_FLOAT_true = []
config_ENGINE_VERTEX_BUFFER_FLOAT_false = []
config_ENGINE_VERTEX_BUFFER_STEP = ["config_ENGINE_VERTEX_BUFFER_STEP_64bit"]
config_ENGINE_VERTEX_BUFFER_STEP_16bit = []
config_ENGINE_VERTEX_BUFFER_STEP_32bit = []
config_ENGINE_VERTEX_BUFFER_STEP_64bit = []

config_DEFAULT_INPUT_DETECT_OFFSET_MS = [
    "config_DEFAULT_INPUT_DETECT_OFFSET_MS_33",
]
config_DEFAULT_INPUT_DETECT_OFFSET_MS_33 = []
config_DEFAULT_INPUT_DETECT_OFFSET_MS_16 = []

config_INPUT_UNIT_BUFFER_LEN = ["config_INPUT_UNIT_BUFFER_LEN_0"]
config_INPUT_UNIT_BUFFER_LEN_0 = []
config_INPUT_UNIT_BUFFER_LEN_4 = []

config_INPUT_BUFFER_DIM_NUM = ["config_INPUT_BUFFER_DIM_NUM_4"]
config_INPUT_BUFFER_DIM_NUM_4 = []

config_UNIFORM_INPUT_BUFFER_CLEAR_COUNT_PER_FRAME = [
    "config_UNIFORM_INPUT_BUFFER_CLEAR_COUNT_PER_FRAME_0",
]
config_UNIFORM_INPUT_BUFFER_CLEAR_COUNT_PER_FRAME_0 = []

config_MODEL = ["config_MODEL_MAX_ATTECHMENT_NUM_64"]
config_MODEL_MAX_ATTECHMENT_NUM = ["config_MODEL_MAX_ATTECHMENT_NUM_64"]
config_MODEL_MAX_ATTECHMENT_NUM_64 = []
config_MODEL_MAX_ATTECHMENT_NUM_32 = []
config_MODEL_MAX_ATTECHMENT_NUM_16 = []
config_MODEL_MAX_ATTECHMENT_NUM_8 = []


config_DEFAULT_MEM_PROPERTY_TYPE = [
    "config_DEFAULT_MEM_PROPERTY_TYPE_DEVICE_LOCAL_BIT",
    "config_DEFAULT_MEM_PROPERTY_TYPE_HOST_VISIBLE_BIT",
    ]
config_DEFAULT_MEM_PROPERTY_TYPE_DEVICE_LOCAL_BIT = []
config_DEFAULT_MEM_PROPERTY_TYPE_HOST_VISIBLE_BIT = []
config_DEFAULT_MEM_PROPERTY_TYPE_HOST_COHERENT_BIT = []
config_DEFAULT_MEM_PROPERTY_TYPE_HOST_CACHED_BIT = []
config_DEFAULT_MEM_PROPERTY_TYPE_LAZILY_ALLOCATED_BIT = []

config_DEFAULT_IS_PERFORMANCE_FIRST = ["config_DEFAULT_IS_PERFORMANCE_FIRST_false"]
config_DEFAULT_IS_PERFORMANCE_FIRST_true = []
config_DEFAULT_IS_PERFORMANCE_FIRST_false = []

config_DEFAULT_CMD_POOL_TYPE = [
    "config_DEFAULT_CMD_POOL_TYPE_RESET",
]
config_DEFAULT_CMD_POOL_TYPE_PROTECTED = []
config_DEFAULT_CMD_POOL_TYPE_TRANSIENT = []
config_DEFAULT_CMD_POOL_TYPE_RESET = []

config_DEFAULT_FPS = ["config_DEFAULT_RENDER_FPS","config_DEFAULT_LOGICAL_FPS","config_DEFAULT_PHYSICS_FPS"]
config_DEFAULT_RENDER_FPS = ["config_DEFAULT_RENDER_FPS_UNLIMITED"]
config_DEFAULT_LOGICAL_FPS = ["config_DEFAULT_LOGICAL_FPS_UNLIMITED"]
config_DEFAULT_PHYSICS_FPS = ["config_DEFAULT_PHYSICS_FPS_UNLIMITED"]

config_DEFAULT_RENDER_FPS_UNLIMITED = []
config_DEFAULT_LOGICAL_FPS_UNLIMITED = []
config_DEFAULT_PHYSICS_FPS_UNLIMITED = []

config_DEFAULT_RENDER_FPS_120 = []
config_DEFAULT_LOGICAL_FPS_120 = []
config_DEFAULT_PHYSICS_FPS_120 = []

config_DEFAULT_RENDER_FPS_60 = []
config_DEFAULT_LOGICAL_FPS_60 = []
config_DEFAULT_PHYSICS_FPS_60 = []

config_DEFAULT_RENDER_FPS_30 = []
config_DEFAULT_LOGICAL_FPS_30 = []
config_DEFAULT_PHYSICS_FPS_30 = []




std_use = ["std_use_LinkedList", "std_use_time"]
std_use_LinkedList = []
std_use_time = []

[build-dependencies]
cc = "1.*"

#inner dependencies
# [dependencies.dse_macros]
# path = "..\\dse_macros"

[target.'cfg(unix)'.dependencies.dse_macros]
path = "..//dse_macros"

[target.'cfg(windows)'.dependencies.dse_macros]
path = "..\\dse_macros"

#outer dependencies

[target.'cfg(windows)'.dependencies.hwloc]
version = "0.*"

[dependencies.ash]
features = ["loaded", "debug"]
version = "0.37.*"
#version = "0.38.*" # extension mod has been cancel,code need renew carefully

[dependencies.walkdir]
version = "2.3.*"

[dependencies.libc]
version = "0.2.*"

[dependencies.shaderc]
version = "0.8.*"
#features=["build-from-source"]

[dependencies.glam]
version = "0.25.*"

[dependencies.gltf]
version = "1.4.*"

[dependencies.serde]
version = "1.*"
features = ["derive"]

[dependencies.toml]
version = "0.8.*"

[target.'cfg(windows)'.dependencies.libloading]
version = "0.7.4"

[target.'cfg(windows)'.dependencies.winapi]
features = ["winuser", "libloaderapi"]
version = "0.3.*"

[target.'cfg(windows)'.dependencies.winsafe]
features = ["kernel"]
version = "0.0.12"
