[package]
edition = "2021"
name = "dse_macros"
version = "0.0.1"

[features]
default=["config","load","test","derive_macro_setting"]
config=["config_META_VALUE_TYPE_NUM"]

test=["test_dse_proc_macro"]
test_dse_proc_macro=[]

load=["load_meta_serialize"]
load_meta_serialize=[]

config_META_VALUE_TYPE_NUM=["config_META_VALUE_TYPE_NUM_32"]
config_META_VALUE_TYPE_NUM_32=[]
config_META_VALUE_TYPE_NUM_16=[]
config_META_VALUE_TYPE_NUM_64=[]

derive_macro_setting=["serialize_setting"]

serialize_setting=["serialize_setting_impl_debug"]
serialize_setting_impl_debug=[]



[lib]
proc-macro = true

[dependencies.syn]
version = "2.*"

[dependencies.quote]
version = "1.*"

[dependencies.proc-macro2]
default-features = false
version = "1.0.*"
